# extract-to-train

./: .gitignore  README.md  SPEC.md  SPECS_es.md  env.example  pyproject.toml
examples/: documento_largo.md  guia_ia_espanol.md  sample_ai_guide.md  sample_output_alpaca.jsonl  sample_output_openai.jsonl  sample_output_sharegpt.jsonl  tutorial.md
src/extract_to_train/: cli.py
src/extract_to_train/core/: extractor.py  generator.py  pipeline.py  validator.py
src/extract_to_train/llm/: client.py  prompts.py
src/extract_to_train/models/: config.py  dataset.py
src/extract_to_train/utils/: config.py
tests/: conftest.py
tests/fixtures/: __init__.py  sample_config.yaml  sample_dataset.json  sample_markdown.md
tests/unit/: test_cli.py  test_core_extractor.py  test_core_generator.py  test_core_pipeline.py  test_core_validator.py  test_llm_client.py  test_llm_prompts.py  test_models_config.py  test_models_dataset.py  test_utils_config.py
